--- a/.github/ISSUE_TEMPLATE/2-projector-submission-form-template.yaml
+++ b/.github/ISSUE_TEMPLATE/2-projector-submission-form-template.yaml
@@ -12,8 +12,8 @@ body:
     id: product_page
     attributes:
       label: Product Page
-      description: Please enter the URL of the product page or specification sheet. This is just to keep track on where the data comes from.
-      placeholder: https://www.barco.com/en/product/udx-4k32
+      description: "Please enter the URL of the product page or specification sheet. This is just to keep track on where the data comes from."
+      placeholder: "https://www.barco.com/en/product/udx-4k32"
     validations:
       required: true
 
@@ -25,7 +25,7 @@ body:
     id: vendor
     attributes:
       label: Vendor
-      description: Select the proejctor manufacturer
+      description: "Select the proejctor manufacturer"
       options:
         - Barco
         - Christie
@@ -39,15 +39,15 @@ body:
     id: other_vendor
     attributes:
       label: Other Vendor
-      description: If you selected "Other" above, please specify the vendor here.
-      placeholder: Enter the other vendor name
+      description: "If you selected 'Other' above, please specify the vendor here."
+      placeholder: "Enter the other vendor name"
 
   - type: input
     id: product
     attributes:
       label: Product
-      description: What's the product name?
-      placeholder: ex. DLP Laser Projector
+      description: "What's the product name?"
+      placeholder: "ex. DLP Laser Projector"
     validations:
       required: true
 
@@ -55,7 +55,7 @@ body:
     id: info
     attributes:
       label: Additional Information
-      description: Enter any kind of good-to-have information
+      description: "Enter any kind of good-to-have information"
 
   #### Specs 1
   - type: markdown
@@ -66,7 +66,7 @@ body:
     id: model
     attributes:
       label: Model
-      description: What's the model name?
+      description: "What's the model name?"
       placeholder: "UDX-U45LC"
     validations:
       required: true
@@ -75,61 +75,61 @@ body:
     id: resolution
     attributes:
       label: Projector Resolution (px)
-      description: (Optional) What's the projector's native output resolution?
+      description: "(Optional) What's the projector's native output resolution?"
       placeholder: "3840 x 2400 px"
 
   - type: input
     id: technology
     attributes:
       label: Technology
-      description: (Optional) What type of projection system is used?
+      description: "(Optional) What type of projection system is used?"
       placeholder: "3-Chip DLP RGB Laser"
 
   - type: input
     id: stereo3d
     attributes:
       label: Stereo 3D
-      description: (Optional) Is stereoscopic 3D playback supported?
+      description: "(Optional) Is stereoscopic 3D playback supported?"
       placeholder: Yes
 
   - type: input
     id: cabinet_size
     attributes:
       label: Cabinet Size (mm)
-      description: (Optional) What is the overall dimensions of the projector?
+      description: "(Optional) What is the overall dimensions of the projector?"
       placeholder: "500 mm x 500 mm x 73 mm"
 
   - type: input
     id: noise_level
     attributes:
       label: Noise Level
-      description: (Optional) What's the noise level of the projector when in use?
+      description: "(Optional) What's the noise level of the projector when in use?"
       placeholder: "50 dB (A)"
 
   - type: input
     id: brightness
     attributes:
       label: brightness (nits)
-      description: (Optional) What's the brightness of the projector?
+      description: "(Optional) What's the brightness of the projector?"
       placeholder: "45000 Lumens"
 
   - type: input
     id: contrast_ratio
     attributes:
       label: Contrast Ratio
-      description: (Optional) What's the native contrast ratio of the projector?
+      description: "(Optional) What's the native contrast ratio of the projector?"
       placeholder: "800 nits"
 
   - type: input
     id: average_power
     attributes:
       label: Average Power
-      description: (Optional) What is the total mass of the projector when active?
+      description: "(Optional) What is the total mass of the projector when active?"
       placeholder: "3.75 KW @ 200-240V"
 
   - type: input
     id: mass
     attributes:
       label: Mass (kg)
-      description: (Optional) What is the total mass for the projector when fully configured and operational?
+      description: "(Optional) What is the total mass for the projector when fully configured and operational?"
       placeholder: "92 kg"
