--- a/.github/ISSUE_TEMPLATE/1-panel-submission-form-template.yaml
+++ b/.github/ISSUE_TEMPLATE/1-panel-submission-form-template.yaml
@@ -6,17 +6,14 @@ labels: [led_panel_submission]
 body:
   - type: markdown
     attributes:
-      value: |
-        Thanks for taking the time to make the database better!
-        After creating this issue a PR will automatically be created with all files generated.
+      value: "Thanks for taking the time to make the database better! After creating this issue a PR will automatically be created with all files generated."
 
   - type: textarea
     id: product_page
     attributes:
       label: Product Page
-      description: Please enter the URL of the product page or specification sheet. This is just to keep track on where the data comes from.
-      placeholder: |
-        https://www.roevisual.com/en/products/ruby
+      description: "Please enter the URL of the product page or specification sheet. This is just to keep track on where the data comes from."
+      placeholder: "https://www.roevisual.com/en/products/ruby"
     validations:
       required: true
 
@@ -28,7 +25,7 @@ body:
     id: vendor
     attributes:
       label: Vendor
-      description: Select the LED panel manufacturer
+      description: "Select the LED panel manufacturer"
       options:
         - AOTO
         - ROE Visual
@@ -42,15 +39,15 @@ body:
     id: other_vendor
     attributes:
       label: Other Vendor
-      description: If you selected "Other" above, please specify the vendor here.
-      placeholder: Enter the other vendor name
+      description: "If you selected 'Other' above, please specify the vendor here."
+      placeholder: "Enter the other vendor name"
 
   - type: input
     id: product
     attributes:
       label: Product
-      description: What's the LED panel product name?
-      placeholder: ex. Ruby
+      description: "What's the LED panel product name?"
+      placeholder: "ex. Ruby"
     validations:
       required: true
 
@@ -58,7 +55,7 @@ body:
     id: info
     attributes:
       label: Additional Information
-      description: Enter any kind of good-to-have information
+      description: "Enter any kind of good-to-have information"
 
   #### Specs 1
   - type: markdown
@@ -69,7 +66,7 @@ body:
     id: model
     attributes:
       label: Model
-      description: What's the LED panel model name?
+      description: "What's the LED panel model name?"
       placeholder: "RB1.2"
     validations:
       required: true
@@ -78,47 +75,47 @@ body:
     id: cabinet_resolution
     attributes:
       label: Cabinet Resolution (px)
-      description: (Optional) What's the LED panel's resolution?
-      placeholder: 320x320 px
+      description: "(Optional) What's the LED panel's resolution?"
+      placeholder: "320x320 px"
 
   - type: input
     id: pixel_pitch
     attributes:
       label: Pixel Pitch (mm)
-      description: (Optional) What is the distance between the individual LEDs on the panel?
+      description: "(Optional) What is the distance between the individual LEDs on the panel?"
       placeholder: "1.25 mm"
 
   - type: input
     id: cabinet_size
     attributes:
       label: Cabinet Size (mm)
-      description: (Optional) What is the overall dimensions (Length x Width x Thickness) of the LED panel?
+      description: "(Optional) What is the overall dimensions (Length x Width x Thickness) of the LED panel?"
       placeholder: "500 mm x 500 mm x 73 mm"
 
   - type: input
     id: refresh_rate
     attributes:
       label: Refresh Rate (Hz)
-      description: How many times per second does the display refresh?
+      description: "How many times per second does the display refresh?"
       placeholder: "7680 Hz"
 
   - type: input
     id: brightness
     attributes:
       label: Brightness (nits)
-      description: (Optional) What's the brightness of the display?
+      description: "(Optional) What's the brightness of the display?"
       placeholder: "800 nits"
 
   - type: input
     id: average_power
     attributes:
       label: Average Power
-      description: (Optional) What is the total mass of the LED panel when active?
+      description: "(Optional) What is the total mass of the LED panel when active?"
       placeholder: "105 Watts"
 
   - type: input
     id: mass
     attributes:
       label: Mass (kg)
-      description: (Optional) What is the total mass for the LED panel when fully configured and operational?
+      description: "(Optional) What is the total mass for the LED panel when fully configured and operational?"
       placeholder: "10.1 kg"
