--- a/.github/ISSUE_TEMPLATE/2-projector-submission-form-template.yaml
+++ b/.github/ISSUE_TEMPLATE/2-projector-submission-form-template.yaml
@@ -26,7 +26,7 @@ body:
     attributes:
       label: "Vendor"
       description: "Select the proejctor manufacturer"
-      options: |
+      options:
         - Barco
         - Christie
         - Panasonic
