--- a/.github/ISSUE_TEMPLATE/2-projector-submission-form-template.yaml
+++ b/.github/ISSUE_TEMPLATE/2-projector-submission-form-template.yaml
@@ -34,3 +34,10 @@ body:
         - Other
     validations:
       required: true
+
+  - type: input
+    id: other_vendor
+    attributes:
+      label: "Other Vendor"
+      description: "If you selected 'Other' above, please specify the vendor here."
+      placeholder: "Enter the other vendor name"
