--- a/.github/ISSUE_TEMPLATE/2-projector-submission-form-template.yaml
+++ b/.github/ISSUE_TEMPLATE/2-projector-submission-form-template.yaml
@@ -60,3 +60,12 @@ body:
   - type: markdown
     attributes:
       value: "## Specs"
+
+  - type: input
+    id: model
+    attributes:
+      label: "Model"
+      description: "What's the model name?"
+      placeholder: "UDX-U45LC"
+    validations:
+      required: true
