--- a/.github/ISSUE_TEMPLATE/2-projector-submission-form-template.yaml
+++ b/.github/ISSUE_TEMPLATE/2-projector-submission-form-template.yaml
@@ -87,6 +87,6 @@ body:
   - type: input
     id: stereoscopic
     attributes:
-      label: "Stereo3D"
+      label: "Stereo"
       description: "(Optional) Is stereoscopic 3D playback supported?"
       placeholder: ""
