--- a/.github/ISSUE_TEMPLATE/2-projector-submission-form-template.yaml
+++ b/.github/ISSUE_TEMPLATE/2-projector-submission-form-template.yaml
@@ -89,3 +89,10 @@ body:
     attributes:
       label: "Stereo"
       description: "(Optional) Is stereoscopic 3D playback supported?"
+
+  - type: input
+    id: "cabinet_size"
+    attributes:
+      label: "Cabinet Size (mm)"
+      description: "(Optional) What is the overall dimensions of the projector?"
+      placeholder: "500 mm x 500 mm x 73 mm"
