--- a/.github/ISSUE_TEMPLATE/2-projector-submission-form-template.yaml
+++ b/.github/ISSUE_TEMPLATE/2-projector-submission-form-template.yaml
@@ -96,3 +96,10 @@ body:
       label: "Cabinet Size (mm)"
       description: "(Optional) What is the overall dimensions of the projector?"
       placeholder: "500 mm x 500 mm x 73 mm"
+
+  - type: input
+    id: "noise_level"
+    attributes:
+      label: "Noise Level"
+      description: "(Optional) What's the noise level of the projector when in use?"
+      placeholder: "50 dB (A)"
